🐛 Fix carousel horizontal overflow with CSS containment
Use `contain: inline-size` to prevent the carousel's internal
flex track min-content from propagating up to the parent grid
column, which was forcing the page to ~1700px wide on mobile.

--- a/src/vh-tag-carousel/style.scss
+++ b/src/vh-tag-carousel/style.scss
@@ -1,6 +1,7 @@
 .vh-tag-carousel {
   position: relative;
   display: flex;
+  contain: inline-size;
 
   &__viewport {
     flex: 1;
@@ -44,6 +45,7 @@
       overflow: hidden;
       background-color: #ece7e0;
       border-radius: 4px;
+      object-fit: cover;
     }
 
     &-img {
